adjust styling to not hide rows behind fixed div

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -292,3 +292,7 @@ pzsh-topbar {
 .skills-search-field {
   max-width: 300px;
 }
+
+.margin-row {
+  margin-top: 7.5rem;
+}
